# winrt-xaml

./: .gitignore  ARCHITECTURE.md  BUILD_SYSTEM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILE_TIME_XAML.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES_STATUS.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  PROJECT_STATUS.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST_v0.3.0.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  TESTING.md  TODO.md  WINRT_EXAMPLES_GUIDE.md  build.rs  errors-full.txt  resources.rc  winrt-xaml.manifest
.cargo/: config.toml
.cursor/rules/: no-markdown-summaries.mdc  performance-optimization.mdc
.github/: CODEOWNERS  FUNDING.yml  PR_TEMPLATE_v0.3.0.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  performance_issue.yml
.github/workflows/: benchmark-dashboard.yml  benchmark.yml  performance-tracking.yml
benches/: README.md  controls_bench.rs  infrastructure_test.rs  layout_bench.rs  optimized_patterns.rs  reactive_bench.rs  resource_bench.rs  xaml_parser_bench.rs
docs/: README.md  STATE_MANAGEMENT.md  package-lock.json  package.json
docs/src/: index.html
docs/src/app/: app.css  app.html  app.ts
examples/: README.md  advanced_controls_demo.rs  animations_demo.rs  basic_window.rs  calculator.rs  chat_interface.rs  color_picker.rs  controls_demo.rs  controls_showcase.rs  counter.rs  counter_simple.rs  data_binding.rs  form_demo.rs  image_gallery.rs  listview_demo.rs  music_player.rs  mvp_demo.rs  pure_winrt_button.rs  reactive_binding.rs  reactive_binding_simple.rs  resource_dictionary_demo.rs  scrollable_list.rs  settings_panel.rs  shopping_cart.rs  simple_window.rs  timer_stopwatch.rs  todo_app.rs  trait_demo.rs  weather_dashboard.rs  winrt_activation_test.rs  winrt_activation_with_com.rs  winrt_calculator.rs  winrt_calculator_functional.rs  winrt_controls_demo.rs  winrt_counter.rs  winrt_mvp.rs  winrt_simple_window.rs  xaml_compile_error_demo.rs.disabled  xaml_compile_time_demo.rs  xaml_islands_demo.rs  (+2 more)
scripts/: benchmark-local.ps1  compare-benchmarks.ps1
src/: app.rs  error.rs  lib.rs  main.rs  window.rs
src/controls/: button.rs  checkbox.rs  combobox.rs  image.rs  listview.rs  mod.rs  progressbar.rs  slider.rs  textblock.rs  textbox.rs  toggle.rs  uielement.rs
src/events/: mod.rs
src/layout/: border.rs  canvas.rs  grid.rs  mod.rs  scroll_viewer.rs  stack_panel.rs
src/media/: mod.rs
src/reactive/: collection.rs  computed.rs  mod.rs  property.rs
src/resources/: mod.rs
src/winrt/: abi.rs  events.rs  factory.rs  hstring.rs  inspectable.rs  mod.rs  properties.rs  xaml_manager.rs
src/winrt/xaml/: application.rs  mod.rs  uielement.rs  window.rs
src/winrt/xaml/controls/: button.rs  mod.rs  textblock.rs  textbox.rs
src/winrt/xaml/panels/: grid.rs  mod.rs  stackpanel.rs
src/xaml/: mod.rs  parser.rs
src/xaml_islands/: desktop_source.rs  host.rs  mod.rs
src/xaml_native/: animation.rs  ffi.rs  mod.rs  resource_dictionary.rs
tests/: advanced_integration_tests.rs  animation_tests.rs  app_tests.rs  comprehensive_xaml_native_tests.rs  controls_tests.rs  error_tests.rs  events_tests.rs  ffi_error_handling_tests.rs  integration_tests.rs  layout_tests.rs  media_tests.rs  reactive_tests.rs  resource_dictionary_tests.rs  resources_tests.rs  styling_tests.rs  window_tests.rs  xaml_islands_tests.rs  xaml_native_tests.rs  xaml_parser_tests.rs
winrt-xaml-macros/: Cargo.toml  README.md
winrt-xaml-macros/src/: codegen.rs  lib.rs
xaml_islands_helper/: CMakeLists.txt  README.md  build.bat
xaml_islands_helper/src/: xaml_islands_bridge.cpp  xaml_islands_bridge.h
