[package]
name = "winrt-xaml"
version = "0.1.0"
edition = "2021"
authors = ["Pegasus Heavy Industries LLC"]
description = "A Rust library for creating UIs using WinRT and XAML"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/winrt-xaml"
keywords = ["winrt", "xaml", "ui", "windows", "gui"]
categories = ["gui", "api-bindings"]
autobins = false

[lib]
name = "winrt_xaml"
path = "src/lib.rs"

[[example]]
name = "basic_window"
path = "examples/basic_window.rs"

[[example]]
name = "simple_window"
path = "examples/simple_window.rs"

[[example]]
name = "controls_demo"
path = "examples/controls_demo.rs"

[[example]]
name = "data_binding"
path = "examples/data_binding.rs"

[[example]]
name = "todo_app"
path = "examples/todo_app.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "form_demo"
path = "examples/form_demo.rs"

[[example]]
name = "settings_panel"
path = "examples/settings_panel.rs"

[[example]]
name = "color_picker"
path = "examples/color_picker.rs"

[[example]]
name = "timer_stopwatch"
path = "examples/timer_stopwatch.rs"

[[example]]
name = "image_gallery"
path = "examples/image_gallery.rs"

[[example]]
name = "music_player"
path = "examples/music_player.rs"

[[example]]
name = "weather_dashboard"
path = "examples/weather_dashboard.rs"

[[example]]
name = "shopping_cart"
path = "examples/shopping_cart.rs"

[[example]]
name = "chat_interface"
path = "examples/chat_interface.rs"

[[example]]
name = "counter_simple"
path = "examples/counter_simple.rs"

[[example]]
name = "trait_demo"
path = "examples/trait_demo.rs"

[[example]]
name = "winrt_activation_test"
path = "examples/winrt_activation_test.rs"

[[example]]
name = "winrt_activation_with_com"
path = "examples/winrt_activation_with_com.rs"

[[example]]
name = "xaml_islands_demo"
path = "examples/xaml_islands_demo.rs"

[[example]]
name = "winrt_mvp"
path = "examples/winrt_mvp.rs"

[[example]]
name = "pure_winrt_button"

[[example]]
name = "winrt_controls_demo"

[[example]]
name = "winrt_counter"

[[example]]
name = "winrt_simple_window"

[[example]]
name = "winrt_calculator"
path = "examples/pure_winrt_button.rs"

[[bin]]
name = "memory_profile"
path = "bin/memory_profile.rs"
required-features = ["dhat-heap"]

[dependencies]
# Microsoft's official Windows crate for Win32 and WinRT infrastructure
windows = { version = "0.58", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "implement",
] }

# For parsing XAML
quick-xml = "0.37"

# For async operations
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# For thread-safe reference counting
parking_lot = "0.12"

# For lazy initialization
once_cell = "1.19"

# For derive macros
thiserror = "2.0"

# For logging
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
# For benchmarking
criterion = { version = "0.6", features = ["html_reports"] }
# For property-based testing
proptest = "1.4"
# For test utilities
pretty_assertions = "1.4"
# For measuring test coverage
test-case = "3.3"

[dependencies.dhat]
version = "0.3"
optional = true

[build-dependencies]
windows = "0.58"
embed-resource = "2.4"
winres = "0.1"

# Benchmark configuration
[[bench]]
name = "infrastructure_test"
harness = false
required-features = []

[[bench]]
name = "optimized_patterns"
harness = false
required-features = []

[[bench]]
name = "controls_bench"
harness = false
required-features = ["xaml-islands"]

[[bench]]
name = "layout_bench"
harness = false
required-features = ["xaml-islands"]

[[bench]]
name = "xaml_parser_bench"
harness = false
required-features = ["xaml-islands"]

[[bench]]
name = "resource_bench"
harness = false
required-features = ["xaml-islands"]

# Profiling configuration
[profile.bench]
debug = true

[profile.release]
debug = true # For profiling

[features]
default = ["xaml-islands"]
xaml-islands = []
uwp = []
dhat-heap = ["dhat"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
