[package]
name = "winrt-xaml"
version = "0.3.0"
edition = "2021"
authors = ["Pegasus Heavy Industries LLC"]
description = "A Rust library for creating modern Windows UIs using WinRT and XAML with reactive data binding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/winrt-xaml"
documentation = "https://docs.rs/winrt-xaml"
homepage = "https://github.com/pegasusheavy/winrt-xaml"
readme = "README.md"
keywords = ["winrt", "xaml", "ui", "windows", "gui"]
categories = ["gui", "api-bindings", "os::windows-apis"]
autobins = false
rust-version = "1.70"

[lib]
name = "winrt_xaml"
path = "src/lib.rs"

[[example]]
name = "basic_window"
path = "examples/basic_window.rs"

[[example]]
name = "simple_window"
path = "examples/simple_window.rs"

[[example]]
name = "controls_demo"
path = "examples/controls_demo.rs"

[[example]]
name = "todo_app"
path = "examples/todo_app.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "form_demo"
path = "examples/form_demo.rs"

[[example]]
name = "settings_panel"
path = "examples/settings_panel.rs"

[[example]]
name = "color_picker"
path = "examples/color_picker.rs"

[[example]]
name = "chat_interface"
path = "examples/chat_interface.rs"

[[example]]
name = "counter_simple"
path = "examples/counter_simple.rs"

[[example]]
name = "winrt_controls_demo"
path = "examples/winrt_controls_demo.rs"

[[example]]
name = "winrt_counter"
path = "examples/winrt_counter.rs"

[[example]]
name = "winrt_calculator_functional"
path = "examples/winrt_calculator_functional.rs"

[[example]]
name = "scrollable_list"
path = "examples/scrollable_list.rs"

[[example]]
name = "controls_showcase"
path = "examples/controls_showcase.rs"
required-features = ["xaml-islands"]

[[example]]
name = "reactive_binding_simple"
path = "examples/reactive_binding_simple.rs"
required-features = ["xaml-islands"]

[[example]]
name = "xaml_compile_time_demo"
path = "examples/xaml_compile_time_demo.rs"

[[example]]
name = "xaml_serde_demo"
path = "examples/xaml_serde_demo.rs"

[[example]]
name = "animations_demo"
path = "examples/animations_demo.rs"
required-features = ["xaml-islands"]

[[example]]
name = "resource_dictionary_demo"
path = "examples/resource_dictionary_demo.rs"
required-features = ["xaml-islands"]

[[bin]]
name = "memory_profile"
path = "bin/memory_profile.rs"
required-features = ["dhat-heap"]

[dependencies]
# Microsoft's official Windows crate for Win32 and WinRT infrastructure
windows = { version = "0.58", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "implement",
] }

# Compile-time XAML parsing macro
winrt-xaml-macros = { path = "winrt-xaml-macros" }

# For async operations
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }

# For thread-safe reference counting
parking_lot = "0.12"

# For lazy initialization
once_cell = "1.19"

# For derive macros
thiserror = "2.0"

# For logging
log = "0.4"

# For serde-based XAML deserialization (only for xaml_serde_demo example)
[target.'cfg(not(target_os = "none"))'.dev-dependencies]
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
env_logger = "0.11"
# For benchmarking
criterion = { version = "0.6", features = ["html_reports"] }
# For property-based testing
proptest = "1.4"
# For test utilities
pretty_assertions = "1.4"
# For measuring test coverage
test-case = "3.3"

[dependencies.dhat]
version = "0.3"
optional = true

[build-dependencies]
windows = "0.58"
embed-resource = "2.4"
winres = "0.1"

# Benchmark configuration
[[bench]]
name = "reactive_bench"
harness = false
required-features = ["xaml-islands"]

# Profiling configuration
[profile.bench]
debug = true

[profile.release]
debug = true # For profiling

[features]
default = ["xaml-islands"]
xaml-islands = []
uwp = []
dhat-heap = ["dhat"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
