[package]
name = "winrt-xaml-macros"
version = "0.3.0"
edition = "2021"
authors = ["Pegasus Heavy Industries LLC"]
description = "Procedural macros for compile-time XAML parsing in winrt-xaml"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/winrt-xaml"
documentation = "https://docs.rs/winrt-xaml-macros"
readme = "README.md"
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
# For procedural macros
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# For XAML parsing at compile time with serde support
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
